Preparing for reassessed logics for secondary dataflow actions